# libffi-learn

./: CMakeLists.txt  README.md  main.cpp
libffi/include/: ffi.h
test/: call.cpp
